--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" href="/favicon.ico">
     <title>Proyecto accion</title>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <link href="/css/app.b3e15d92.css" rel="preload" as="style">
     <link href="/css/chunk-vendors.c677b888.css" rel="preload" as="style">
     <link href="/js/app.6c793458.js" rel="preload" as="script">
