--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<!DOCTYPE html><html lang="es"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="copyright" content="Todos los derechos reservados a las Chozas de Francisca"><meta name="description" content="Las chozas de francisca, pequeño espacio rural dentro de la comarca de Puebla de Lillo, donde disfrutar de la tranquilidad, y poder hacer gran cantidad de actividades al aire libre. Para más información contacta con nosotros"><link rel="icon" href="/laschozas.png"><title>chozas</title><link href="/css/app.01807df9.css" rel="preload" as="style"><link href="/css/chunk-vendors.b8f0729e.css" rel="preload" as="style"><link href="/js/app.cfd50966.js" rel="preload" as="script"><link href="/js/chunk-vendors.6cb96674.js" rel="preload" as="script"><link href="/css/chunk-vendors.b8f0729e.css" rel="stylesheet"><link href="/css/app.01807df9.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but chozas doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.6cb96674.js"></script><script src="/js/app.cfd50966.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="copyright" content="Todos los derechos reservados a las Chozas de Francisca">
+    <meta name="description"
+        content="Las chozas de francisca, pequeño espacio rural dentro de la comarca de Puebla de Lillo, donde disfrutar de la tranquilidad, y poder hacer gran cantidad de actividades al aire libre. Para más información contacta con nosotros">
+    <link rel="icon" href="/laschozas.png">
+    <title>chozas</title>
+    <link href="/css/app.01807df9.css" rel="preload" as="style">
+    <link href="/css/chunk-vendors.b8f0729e.css" rel="preload" as="style">
+    <link href="/js/app.cfd50966.js" rel="preload" as="script">
+    <link href="/js/chunk-vendors.6cb96674.js" rel="preload" as="script">
+    <link href="/css/chunk-vendors.b8f0729e.css" rel="preload" as="style">
+    <link href="/css/app.01807df9.css" rel="preload" as="style">
+</head>
+
+<body><noscript><strong>We're sorry but chozas doesn't work properly without JavaScript enabled. Please enable it to
+            continue.</strong></noscript>
+    <div id="app"></div>
+    <script src="/js/chunk-vendors.6cb96674.js" rel="preload" as="script"></script>
+    <script src="/js/app.cfd50966.js" rel="preload" as="script"></script>
+</body>
+
+</html>
