--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <link href="/css/chunk-vendors.b8f0729e.css" rel="preload" as="style">
     <link href="/js/app.cfd50966.js" rel="preload" as="script">
     <link href="/js/chunk-vendors.6cb96674.js" rel="preload" as="script">
-    <link href="/css/chunk-vendors.b8f0729e.css" rel="preload" as="style">
-    <link href="/css/app.01807df9.css" rel="preload" as="style">
+    <link href="/css/chunk-vendors.b8f0729e.css" rel="stylesheet">
+    <link href="/css/app.01807df9.css" rel="stylesheet">
 </head>
 
 <body><noscript><strong>We're sorry but chozas doesn't work properly without JavaScript enabled. Please enable it to
             continue.</strong></noscript>
     <div id="app"></div>
-    <script src="/js/chunk-vendors.6cb96674.js" rel="preload" as="script"></script>
-    <script src="/js/app.cfd50966.js" rel="preload" as="script"></script>
+    <script src="/js/chunk-vendors.6cb96674.js"></script>
+    <script src="/js/app.cfd50966.js"></script>
 </body>
 
 </html>
