--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body><noscript><strong>We're sorry but chozas doesn't work properly without JavaScript enabled. Please enable it to
             continue.</strong></noscript>
     <div id="app"></div>
-    <script src="/js/chunk-vendors.6cb96674.js"></script>
+    <script src="/js/chunk-vendors.6cb96674.js" defer></script>
     <script src="/js/app.cfd50966.js"></script>
 </body>
 
